objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PO_Valore_totale_coppia_fino_2030_sconta__c</fullName>
        <formula>PO_Valore_totale_prima_coppia_fino_2030__c - ((PO_Valore_totale_prima_coppia_fino_2030__c/100)* PO_Sconto_valore_coppia_fino_2030_coll__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valore totale coppia fino 2030 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Valore_totale_prima_coppia_fino_2030__c</fullName>
        <label>Valore totale prima coppia fino al 2030</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_oppty_validit_offerta__c</fullName>
        <defaultValue>&quot;30 giorni dalla data della presente;&quot;</defaultValue>
        <label>Validità Offerta</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Oppty_collegamenti_BTS</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>Oppty collegamenti BTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oppty_collegamenti_Backhauling</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <description>RT per Opportunity collegameni di Backhauling</description>
        <label>Oppty collegamenti Backhauling</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Evento_Temporaneo</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Evento Temporaneo</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Fiber_Lease</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Fiber Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Fiber_Link</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Fiber Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_IRU</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty IRU</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Misto_Lease_Link_per_FW</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Misto Lease-Link per FW</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_BTS</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità BTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Backhauling</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Backhauling</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_CircuitiDiretti</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO_Oppty_Richiesta_fattibilit_CircuitiDiretti</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_DarkFiber</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità DarkFiber</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Evento_Temporaneo</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Evento Temporaneo</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Evento_Temporaneo_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Evento Temporaneo - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Fiber_Lease</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Fiber Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Fiber_Lease_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Fiber Lease - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Fiber_Link</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Fiber Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Fiber_Link_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Fiber Link - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_IRU</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità IRU</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_IRU_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità IRU - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Misto_Lease_Link_per_FW</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Misto Lease-Link per FW</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_Misto_Lease_Link_per_FW_Approval</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità Misto Lease-Link per FW - Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_P2PBase</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <description>PO_Oppty_Richiesta_fattibilit_P2PBase</description>
        <label>PO Oppty Richiesta fattibilità P2PBase</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_P2P_Attiva</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <description>RT per Opportunity fattibilità di P2P Attiva</description>
        <label>PO Oppty Richiesta fattibilità P2P Attiva</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_Richiesta_fattibilit_P2P_AttivaELine</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty Richiesta fattibilità P2P Attiva E-Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO Oppty collegamenti</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti_CircuitiDiretti</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>PO_Oppty_collegamenti_CircuitiDiretti</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti_DarkFiber</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>Oppty collegamenti DarkFiber</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti_P2PBase</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>Oppty collegamenti P2PBase</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti_P2P_Attiva</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <description>RT per Opportunity di P2P Attiva</description>
        <label>Oppty collegamenti P2P Attiva</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Oppty_collegamenti_P2P_AttivaELine</fullName>
        <active>true</active>
        <businessProcess>PO Oppty collegamenti</businessProcess>
        <label>Oppty collegamenti P2P Attiva E-Line</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>